# RenewBench-Crawler

./: .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-test.yml
configs/energy/: entsoe.yaml
configs/weather/: era5.yaml  icon_dream_global.yaml
logos/: logo_hai.svg.html  logo_kit.svg.html
rbc/config/: loader.py  schema.py
rbc/downloaders/: entsoe.py  utils.py
rbc/energy/entsoe/: __init__.py  downloader.py
rbc/nwp_dowloaders/: era5.py
rbc/weather/: __init__.py  era5.py  utils.py
rbc/weather/era5/: __init__.py  downloader.py  mappings.py
rbc/weather/icon_dream_global/: __init__.py  downloader.py
scripts/: entsoe_download.py  era5_download.py
scripts/energy/: entsoe_download.py
scripts/weather/: era5_download.py  icon_dream_global_download.py
tests/: conftest.py  test_dummy.py
tests/config/: conftest.py  test_loader.py  test_schema.py
tests/downloaders/: test_entsoe.py
tests/energy/entsoe/: test_downloader.py
tests/nwp_downloaders/: test_era5.py
tests/scripts/: test_entsoe_download.py
tests/weather/: __init__.py
tests/weather/era5/: __init__.py  test_downloader.py
tests/weather/icon_dream_global/: __init__.py  test_icon_dream_global_downloader.py
