[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rbc"]

[project]
name = "RenewBench-Crawler"
version = "0.0.1"
authors = [
  { name="RenewBench Association", email="renewbench@lists.kit.edu"},
]
description = "Data crawlers for building RenewBench dataset"
readme = "README.md"
requires-python = ">=3.11,<3.14.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 1 - Planning",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "entsoe-apy",
    "eptr2",
    "geopandas",
    "nemosis",
    "pandas",
    "pydantic",
    "pyyaml",
    "requests",
    "shapely",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "coverage",
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-mpi",
    "ruff",
]
